src/snapshots/bminor__parser__test__assignment_statement-8.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [;\")"
---
Err(
    UnexpectedToken(
        "Token { kind: Semicolon, lexeme: \";\", line: 0 }",
    ),
)
