src/snapshots/bminor__parser__test__block_statements.snap
---
source: src/parser.rs
expression: "parse_statement(\"{}\")"
---
Ok(
    Block {
        statements: [],
    },
)
