src/snapshots/bminor__parser__test__call_expression-2.snap
---
source: src/parser.rs
expression: "parse_expression(\"x(a)\")"
---
Ok(
    Call {
        name: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
        args: [
            Variable {
                name: Token {
                    kind: Identifier,
                    lexeme: "a",
                    line: 0,
                },
            },
        ],
    },
)
