src/snapshots/bminor__parser__test__call_expression-7.snap
---
source: src/parser.rs
expression: "parse_expression(\"x(a\")"
---
Err(
    UnexpectedToken(
        "expect ')' after param list",
    ),
)
