src/snapshots/bminor__parser__test__call_expression-8.snap
---
source: src/parser.rs
expression: "parse_expression(\"x(\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
