src/snapshots/bminor__parser__test__call_expression.snap
---
source: src/parser.rs
expression: "parse_expression(\"x()\")"
---
Ok(
    Call {
        name: Token {
            kind: Identifier,
            lexeme: "x",
            line: 0,
        },
        params: [],
    },
)
